@@ -1,3 +1,7 @@
+2013-05-11    <simsong@ncr.nps.edu>
+
+	* src/scan_winpe.cpp (scan_winpe_verify): added verification of section names and DLL names to reject false positives. 
+
 2013-05-09    <simsong@ncr.nps.edu>
 
 	* src/scan_net.cpp (p): carved ethernet packets are now properly recorded in ether.txt and tcp.txt
